--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
 <!-- teach section start-->
 		<section class="teach">
 			<div id="Galary" class="container">
-				<div class="methods">
+				<div class="texter" id="space_sec">
 					<h1>Innovative methods of teaching</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ut ducimus officiis ad, quisquam obcaecati. Nobis reprehenderit deserunt fuga animi?
 					the book room on the broom pluaral none At the school time we end overflowthe expo will show case school from montensori to class 12 visitor  can meet a screet
-					Lorem ipsum dolor sit amet, consectetur.
-					</p>
+					Lorem ipsum dolor sit amet, consectetur.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!Nobis reprehenderit deserunt fuga animi? </p>
 					<a href="#">Read More</a>
 				</div>
 				<div class="methods-img">
