--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 					<a href="#" class="hi-1">Read More</a>
 				</div>
 				<div class="img-g">
-					<img src="images/img_p.jpg" alt="kid" id="im-1">
-					<img src="images/img-0e.jpg" alt="kid" id="im-2">
-					<img src="images/img-0002.jpg" alt="kid" id="im-3">
+					<img src="images/kids.png" alt="kid">
 				</div>
 			</div>
 		</section>
