--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<h1>Welcome !</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
-					<a href="#" class="hi-1">Read More</a>
+					<a href="#" class="btn-blue-bg">Read More</a>
 				</div>
 				<div class="img-g">
 					<img src="images/kids.png" alt="kid">
@@ -51,38 +51,37 @@
 			</div>
 		</section>
 <!-- Center Section start -->
-		<section class="center">
+		<section class="features">
 			<div id="Event" class="container">
 				<div class="box">
 					<h2>Our Center</h2>
 					<img src="images/pooo.jpg" alt="">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#">Read More</a>
+					<a href="#" class="btn-blue-bg">Read More</a>
 				</div>
 				<div class="box">
 					<h2>Activities</h2>
 					<img src="images/po.jpg" alt="">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#">Read More</a>
+					<a href="#" class="btn-blue-bg">Read More</a>
 				</div>
 				<div class="box">
 					<h2>Our Event</h2>
 					<img src="images/poo.jpg" alt="">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#">Read More</a>
+					<a href="#" class="btn-blue-bg">Read More</a>
 				</div>
 			</div>
 		</section>
 <!-- teach section start-->
 		<section class="teach">
-			<div id="Galary" class="container">
-				<div class="texter" id="space_sec">
+			<div id="Galary" class="welcome">
+				<div class="container">
+				<div class="texter">	
 					<h1>Innovative methods of teaching</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae ut ducimus officiis ad, quisquam obcaecati. Nobis reprehenderit deserunt fuga animi?
-					the book room on the broom pluaral none At the school time we end overflowthe expo will show case school from montensori to class 12 visitor  can meet a screet
-					Lorem ipsum dolor sit amet, consectetur.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!Nobis reprehenderit deserunt fuga animi? </p>
-					<a href="#">Read More</a>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
+          				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
+					<a href="#" class="btn-blue-bg">Read More</a>
 				</div>
 				<div class="methods-img">
 					<img src="images/img-97.jpg" alt="">
@@ -92,7 +91,7 @@
 <!-- Team section start -->
 		<section class="team">
 			<div id="FAQs" class="container">
-				<h2>Teaching Team</h2>
+				<h1>Teaching Team</h1>
 				<div class="boxs">
 					<img src="images/img-0f.jpg" alt="">
 					<p>Cheif guest.</p>
