--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow|Barlow+Semi+Condensed|Montserrat+Alternates|Raleway" rel="stylesheet">
 </head>
 <body>
-<!-- Header start -->
-	<header class="head-1">
+  <!-- Header start -->
+	<header>
 		<div class="container">
 			<div class="logo">
 				<h2>Kinder</h2>
@@ -17,17 +17,18 @@
 			</div>
 			<div class="navigation">
 				<ul class="nav">
-				<li class="home active"><a href="#Home">Home</a></li>
-				<li class="about"><a href="#About">About</a></li>
-				<li class="event"><a href="#Event">Event</a></li>
-				<li class="gallery"><a href="#Galary">Gallery</a></li>
-				<li class="faqs"><a href="#FAQs">FAQs</a></li>
-				<li class="contact"><a href="#contact">Contact</a></li>
+				<li class="active"><a href="#Home">Home</a></li>
+				<li><a href="#About">About</a></li>
+				<li><a href="#Event">Event</a></li>
+				<li><a href="#Galary">Gallery</a></li>
+				<li><a href="#FAQs">FAQs</a></li>
+				<li><a href="#contact">Contact</a></li>
 				</ul>
 			</div>
 		</div>
 	</header>
-<!-- poster section start -->
+
+  <!-- poster section start -->
 	<section class="poster">
 		<div id="Home" class="poster-inner">
 			<img src="images/children3.jpg" alt="" class="mySlides">
@@ -37,7 +38,9 @@
 			<button class="sbutton2 container" onclick="plusDivs(1)">&#10095;</button>
 		</div>
 	</section>
-		<section id="About" class="welcome">
+
+  <!-- poster section start -->
+	<section id="About" class="welcome">
 			<div class="container">
 				<div class="texter">
 					<h1>Welcome !</h1>
@@ -50,8 +53,9 @@
 				</div>
 			</div>
 		</section>
-<!-- Center Section start -->
-		<section class="features">
+
+  <!-- features Section start -->
+	<section class="features">
 			<div id="Event" class="container">
 				<div class="box">
 					<h2>Our Center</h2>
@@ -73,120 +77,123 @@
 				</div>
 			</div>
 		</section>
-<!-- teach section start-->
-		<section class="teach">
-			<div id="Galary" class="welcome">
-				<div class="container">
-				<div class="texter">	
-					<h1>Innovative methods of teaching</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
-          				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
-					<a href="#" class="btn-blue-bg">Read More</a>
-				</div>
-				<div class="methods-img">
-					<img src="images/img-97.jpg" alt="">
-				</div>
-			</div>
-		</section>
-<!-- Team section start -->
-		<section class="team">
-			<div id="FAQs" class="container">
-				<h1>Teaching Team</h1>
-				<div class="boxs">
-					<img src="images/img-0f.jpg" alt="">
-					<p>Cheif guest.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-				</div>
-				<div class="boxs">
-					<img src="images/img-00c.jpg" alt="">
-					<p>Chairman guest.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-				</div>
-				<div class="boxs">
-					<img src="images/img-0b.jpg" alt="">
-					<p>Vice principal.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-				</div>
-				<div class="boxs">
-					<img src="images/img-0g.jpg" alt="">
-					<p>Honabal guest.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-				</div>
-			</div>
-		</section>
-		<footer class="foot">
-			<div id="contacts" class="container">
-				<div class="some">
-					<h2>Kinder</h2>
-					<p>Children nursery school Daycenter</p>
-					<h3>(800) 2345-6789</h3>
-				</div>
-				<div class="social">
-					<div class="media">
-						<a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>
-						<a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i>
-						<a href="#"><i class="fa fa-wifi" aria-hidden="true"></i>
-					</div>
-					<div class="ul2">
-						<ul>
-							<li><a href="#Home">Home</a></li>
-							<li><a href="#About">About</a></li>
-							<li><a href="#Event">Event</a></li>
-							<li><a href="#Galary">Gallery</a></li>
-							<li><a href="#FAQs">FAQs</a></li>
-							<li><a href="#contacts">Contacts</a></li>
-						</ul>
-					</div>
-					<div class="copy">
-					</div>
-				</div>
-			</div>
-		</footer>
-	</body>
-	<script>
-      var slideIndex = 1;
-		showDivs(slideIndex);
 
-		function plusDivs(n) {
-			showDivs(slideIndex += n);
-		}
+  <!-- teach section start-->
+  <section id="Galary" class="welcome">
+		<div class="container">
+			<div class="texter">
+				<h1>Innovative methods of teaching</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
+				<a href="#" class="btn-blue-bg">Read More</a>
+			</div>
+			<div class="img-g">
+        <img src="images/img-97.jpg" alt="">
+			</div>
+		</div>
+	</section>
 
-	function showDivs(n) {
-		var i;
-		var x = document.getElementsByClassName("mySlides");
-		if (n > x.length) {slideIndex = 1}
-			if (n < 1) {slideIndex = x.length}
-				for (i = 0; i < x.length; i++) {
-				x[i].style.display = "none";
-			}
-		x[slideIndex-1].style.display = "block";
-	}
-	//next javascript
-	function myFunction() {
-		var x = document.getElementById("javab");
-			if (x.style.display === "none") {
-			x.style.display = "block";
-		} else {
-			x.style.display = "none";
-		}
-	}
-	//box2
-	function myFunction1() {
-		var x = document.getElementById("javab1");
-			if (x.style.display === "none") {
-			x.style.display = "block";
-		} else {
-			x.style.display = "none";
-		}
-	}
-	//box3
-	function myFunction2() {
-		var x = document.getElementById("javab2");
-			if (x.style.display === "none") {
-			x.style.display = "block";
-		} else {
-			x.style.display = "none";
-		}
-	}
-    </script>
+  <!-- Team section start -->
+	<section class="team">
+		<div id="FAQs" class="container">
+			<h1>Teaching Team</h1>
+			<div class="boxs">
+				<img src="images/img-0f.jpg" alt="">
+				<p>Cheif guest.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+			</div>
+			<div class="boxs">
+				<img src="images/img-00c.jpg" alt="">
+				<p>Chairman guest.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+			</div>
+			<div class="boxs">
+				<img src="images/img-0b.jpg" alt="">
+				<p>Vice principal.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+			</div>
+			<div class="boxs">
+				<img src="images/img-0g.jpg" alt="">
+				<p>Honabal guest.</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+			</div>
+		</div>
+	</section>
+
+	<footer class="foot">
+		<div id="contacts" class="container">
+			<div class="some">
+				<h2>Kinder</h2>
+				<p>Children nursery school Daycenter</p>
+				<h3>(800) 2345-6789</h3>
+			</div>
+			<div class="social">
+				<div class="media">
+					<a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>
+					<a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i>
+					<a href="#"><i class="fa fa-wifi" aria-hidden="true"></i>
+				</div>
+				<div class="ul2">
+					<ul>
+						<li><a href="#Home">Home</a></li>
+						<li><a href="#About">About</a></li>
+						<li><a href="#Event">Event</a></li>
+						<li><a href="#Galary">Gallery</a></li>
+						<li><a href="#FAQs">FAQs</a></li>
+						<li><a href="#contacts">Contacts</a></li>
+					</ul>
+				</div>
+				<div class="copy">
+				</div>
+			</div>
+		</div>
+	</footer>
+
+  <script>
+    var slideIndex = 1;
+    showDivs(slideIndex);
+
+    function plusDivs(n) {
+      showDivs(slideIndex += n);
+    }
+
+    function showDivs(n) {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      if (n > x.length) {slideIndex = 1}
+      if (n < 1) {slideIndex = x.length}
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      x[slideIndex-1].style.display = "block";
+    }
+    //next javascript
+    function myFunction() {
+      var x = document.getElementById("javab");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+    //box2
+    function myFunction1() {
+      var x = document.getElementById("javab1");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+    //box3
+    function myFunction2() {
+      var x = document.getElementById("javab2");
+      if (x.style.display === "none") {
+        x.style.display = "block";
+      } else {
+        x.style.display = "none";
+      }
+    }
+  </script>
+</body>
 </html>
