--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
 			<h1>Teaching Team</h1>
 			<div class="boxs">
 				<img src="images/img-0f.jpg" alt="">
-				<p>Cheif guest.</p>
+				<h2>Cheif guest.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
 			</div>
 			<div class="boxs">
 				<img src="images/img-00c.jpg" alt="">
-				<p>Chairman guest.</p>
+				<h2>Chairman guest.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
 			</div>
 			<div class="boxs">
 				<img src="images/img-0b.jpg" alt="">
-				<p>Vice principal.</p>
+				<h2>Vice principal.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
 			</div>
 			<div class="boxs">
 				<img src="images/img-0g.jpg" alt="">
-				<p>Honabal guest.</p>
+				<h2>Honabal guest.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
 			</div>
 		</div>
