--- a/index.html
+++ b/index.html
@@ -1,153 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>kinder school</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Barlow|Barlow+Semi+Condensed|Montserrat+Alternates|Raleway" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>kinder school</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Barlow|Barlow+Semi+Condensed|Montserrat+Alternates|Raleway" rel="stylesheet">
 </head>
 <body>
-  <!-- Header start -->
-	<header>
-		<div class="container">
-			<div class="logo">
-				<h2>Kinder</h2>
-				<p>Children Nursery School Daycenter</p>
-			</div>
-			<div class="navigation">
-				<ul class="nav">
-				<li class="active"><a href="#Home">Home</a></li>
-				<li><a href="#About">About</a></li>
-				<li><a href="#Event">Event</a></li>
-				<li><a href="#Galary">Gallery</a></li>
-				<li><a href="#FAQs">FAQs</a></li>
-				<li><a href="#contact">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</header>
+  <!-- header -->
+  <header id="home">
+    <div class="container">
+      <div class="logo">
+        <h2>Kinder</h2>
+        <p>Children Nursery School Daycenter</p>
+      </div>
+      <div class="navigation">
+        <ul class="nav">
+          <li class="active"><a href="#Home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#event">Event</a></li>
+          <li><a href="#gallary">Gallery</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 
-  <!-- poster section start -->
-	<section class="poster">
-		<div id="Home" class="poster-inner">
-			<img src="images/children3.jpg" alt="" class="mySlides">
-			<img src="images/5551.jpg" alt=""  class="mySlides">
-			<img src="images/main_img20.jpg" alt=""  class="mySlides">
-			<button class="sbutton1 container" onclick="plusDivs(-1)">&#10094;</button>
-			<button class="sbutton2 container" onclick="plusDivs(1)">&#10095;</button>
-		</div>
-	</section>
+  <!-- poster -->
+  <section class="poster">
+    <div id="Home" class="poster-inner">
+      <img src="images/children3.jpg" alt="" class="mySlides">
+      <img src="images/5551.jpg" alt=""  class="mySlides">
+      <img src="images/main_img20.jpg" alt=""  class="mySlides">
+      <button class="sbutton1 container" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="sbutton2 container" onclick="plusDivs(1)">&#10095;</button>
+    </div>
+  </section>
 
-  <!-- poster section start -->
-	<section id="About" class="welcome">
-			<div class="container">
-				<div class="texter">
-					<h1>Welcome !</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
-					<a href="#" class="btn-blue-bg">Read More</a>
-				</div>
-				<div class="img-g">
-					<img src="images/kids.png" alt="kid">
-				</div>
-			</div>
-		</section>
+  <!-- about -->
+  <section id="about" class="welcome">
+    <div class="container">
+      <div class="texter">
+        <h1>Welcome!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
+        <a href="#" class="btn-blue-bg">Read More</a>
+      </div>
+      <div class="img-g">
+        <img src="images/kids.png" alt="kid">
+      </div>
+    </div>
+  </section>
 
-  <!-- features Section start -->
-	<section class="features">
-			<div id="Event" class="container">
-				<div class="box">
-					<h2>Our Center</h2>
-					<img src="images/pooo.jpg" alt="">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#" class="btn-blue-bg">Read More</a>
-				</div>
-				<div class="box">
-					<h2>Activities</h2>
-					<img src="images/po.jpg" alt="">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#" class="btn-blue-bg">Read More</a>
-				</div>
-				<div class="box">
-					<h2>Our Event</h2>
-					<img src="images/poo.jpg" alt="">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
-					<a href="#" class="btn-blue-bg">Read More</a>
-				</div>
-			</div>
-		</section>
+  <!-- features -->
+  <section id="event" class="features">
+    <div class="container">
+      <div class="box">
+        <h2>Our Center</h2>
+        <img src="images/pooo.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
+        <a href="#" class="btn-blue-bg">Read More</a>
+      </div>
+      <div class="box">
+        <h2>Activities</h2>
+        <img src="images/po.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
+        <a href="#" class="btn-blue-bg">Read More</a>
+      </div>
+      <div class="box">
+        <h2>Our Event</h2>
+        <img src="images/poo.jpg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam laudantium blanditiis odio, eos asperiores. Fugiat eius, temporibus commodi modi illo reiciendis soluta error non similique amet cupiditate fugit. Odit, architecto.</p>
+        <a href="#" class="btn-blue-bg">Read More</a>
+      </div>
+    </div>
+  </section>
 
-  <!-- teach section start-->
-  <section id="Galary" class="welcome">
-		<div class="container">
-			<div class="texter">
-				<h1>Innovative methods of teaching</h1>
+  <!-- teach-->
+  <section id="gallary" class="welcome">
+    <div class="container">
+      <div class="texter">
+        <h1>Innovative methods of teaching</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo, cum aliquam voluptatum, rem est a deleniti earum vel blanditiis, omnis cumque dolorum incidunt ipsam veritatis? Est esse, magnam amet dignissimos!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
-				<a href="#" class="btn-blue-bg">Read More</a>
-			</div>
-			<div class="img-g">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, quod! Deserunt ad consectetur assumenda quia debitis, a eveniet dicta laborum!</p>
+        <a href="#" class="btn-blue-bg">Read More</a>
+      </div>
+      <div class="img-g">
         <img src="images/img-97.jpg" alt="">
-			</div>
-		</div>
-	</section>
+      </div>
+    </div>
+  </section>
 
-  <!-- Team section start -->
-	<section class="team">
-		<div id="FAQs" class="container">
-			<h1>Teaching Team</h1>
-			<div class="boxs">
-				<img src="images/img-0f.jpg" alt="">
-				<h2>Cheif guest.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-			</div>
-			<div class="boxs">
-				<img src="images/img-00c.jpg" alt="">
-				<h2>Chairman guest.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-			</div>
-			<div class="boxs">
-				<img src="images/img-0b.jpg" alt="">
-				<h2>Vice principal.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-			</div>
-			<div class="boxs">
-				<img src="images/img-0g.jpg" alt="">
-				<h2>Honabal guest.</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
-			</div>
-		</div>
-	</section>
+  <!-- team -->
+  <section id="team" class="team">
+    <div id="FAQs" class="container">
+      <h1>Teaching Team</h1>
+      <div class="boxes">
+        <div class="boxs">
+          <img src="images/img-0f.jpg" alt="">
+          <h2>Cheif guest.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+        </div>
+        <div class="boxs">
+          <img src="images/img-00c.jpg" alt="">
+          <h2>Chairman guest.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+        </div>
+        <div class="boxs">
+          <img src="images/img-0b.jpg" alt="">
+          <h2>Vice principal.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+        </div>
+        <div class="boxs">
+          <img src="images/img-0g.jpg" alt="">
+          <h2>Honabal guest.</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto facere natus quia aliquid cumque perferendis.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-	<footer class="foot">
-		<div id="contacts" class="container">
-			<div class="some">
-				<h2>Kinder</h2>
-				<p>Children nursery school Daycenter</p>
-				<h3>(800) 2345-6789</h3>
-			</div>
-			<div class="social">
-				<div class="media">
-					<a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>
-					<a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i>
-					<a href="#"><i class="fa fa-wifi" aria-hidden="true"></i>
-				</div>
-				<div class="ul2">
-					<ul>
-						<li><a href="#Home">Home</a></li>
-						<li><a href="#About">About</a></li>
-						<li><a href="#Event">Event</a></li>
-						<li><a href="#Galary">Gallery</a></li>
-						<li><a href="#FAQs">FAQs</a></li>
-						<li><a href="#contacts">Contacts</a></li>
-					</ul>
-				</div>
-				<div class="copy">
-				</div>
-			</div>
-		</div>
-	</footer>
+  <!-- footer -->
+  <footer id="contact">
+    <div class="container">
+      <div class="some">
+        <h2>Kinder</h2>
+        <p>Children nursery school Daycenter</p>
+        <h3><a href="tel:(800) 2345-6789">(800) 2345-6789</a></h3>
+      </div>
+      <div class="social">
+        <div class="media">
+          <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-wifi" aria-hidden="true"></i></a>
+        </div>
+        <div class="ul2">
+          <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Event">Event</a></li>
+            <li><a href="#Galary">Gallery</a></li>
+            <li><a href="#FAQs">FAQs</a></li>
+            <li><a href="#contacts">Contacts</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script>
     var slideIndex = 1;
