--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav">
           <li class="active"><a href="#Home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#event">Event</a></li>
+          <li><a href="#features">Features</a></li>
           <li><a href="#gallary">Gallery</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -56,7 +56,7 @@
   </section>
 
   <!-- features -->
-  <section id="event" class="features">
+  <section id="features" class="features">
     <div class="container">
       <div class="box">
         <h2>Our Center</h2>
