--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </section>
 
   <!-- features -->
-  <section id="features" class="features">
+  <section id="gallary" class="features">
     <div class="container">
       <div class="box">
         <h2>Our Center</h2>
@@ -80,7 +80,7 @@
   </section>
 
   <!-- teach-->
-  <section id="gallary" class="welcome">
+  <section id="features" class="welcome">
     <div class="container">
       <div class="texter">
         <h1>Innovative methods of teaching</h1>
