--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </div>
   </section>
 
-  <!-- features -->
-  <section id="gallary" class="features">
+  <!-- gallary -->
+  <section id="gallary" class="gallary">
     <div class="container">
       <div class="box">
         <h2>Our Center</h2>
@@ -79,7 +79,7 @@
     </div>
   </section>
 
-  <!-- teach-->
+  <!-- features-->
   <section id="features" class="welcome">
     <div class="container">
       <div class="texter">
